--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "app"
+    "test": "echo \"hell here\""
   },
   "author": "",
   "license": "ISC",
