--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"hello here\"",
-    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
