--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "a.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node b.js"
   },
   "author": "",
   "license": "ISC",
